Update Valentine message to include 'Mimi'

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 <div class="container">
-    <h1 id="question">Veux-tu être ma Valentine ? ❤️</h1>
+    <h1 id="question">Veux-tu être ma Valentine Mimi ? ❤️</h1>
     <div id="mainImage">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHpueGZ3bmZqZzR0eXp3eGZ3bmZqZzR0eXp3eGZ3bmZqZzR0eXp3JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCBjdXN0b20mY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" width="150">
     </div>
